apps/monitoring/templates/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  ports:
    - port: 8086
      protocol: TCP
      targetPort: 8086
  selector:
    app: influxdb
  sessionAffinity: None
