apps/monitoring/templates/influxdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
spec:
  rules:
  - host: influxdb-v2.legodard.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              number: 8086
